Improve visual formatting of Past 14.33 Papers list

--- a/tutorial/finding-project.html
+++ b/tutorial/finding-project.html
@@ -636,13 +636,34 @@ current_page: finding-project
 
   <p>These papers from past 14.33 students are published in the UEA Journal:</p>
 
-  <ul>
-    <li><a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202024-2025.pdf#page=9" target="_blank">Income Gaps and Political Divides: Local Inequality's Effect on Local Election Polarization</a> (pp. 9-36)</li>
-    <li><a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202024-2025.pdf#page=37" target="_blank">The Impact of Autism Therapy Coverage Mandates on Outcomes for Autistic Children</a> (pp. 37-62)</li>
-    <li><a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202024-2025.pdf#page=63" target="_blank">Assessing the Impact of Project Green Light: A Google Sustainability Initiative to Reduce City Air Pollution</a> (pp. 63-88)</li>
-    <li><a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202023-2024_1.pdf#page=87" target="_blank">Assessing the Impact of Police Officer Line-of-Duty Deaths and Force Size on Civilian Arrests</a> (pp. 87-100)</li>
-    <li><a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202023-2024_1.pdf#page=129" target="_blank">An Empirical Analysis of the 3-Points-for-a-Win Rule in the English Premier League</a> (pp. 129-147)</li>
-    <li><a href="https://economics.mit.edu/sites/default/files/2022-08/UEA%20Journal%202020-2021.pdf#page=11" target="_blank">A Rising Tide for All or Wave for One?: The Effect of Charter School Competition on District Achievement</a> (pp. 11-32)</li>
-    <li><a href="https://economics.mit.edu/sites/default/files/2022-08/UEA%20Journal%202019-2020.pdf#page=46" target="_blank">Post-Earnings Announcement Drift</a> (pp. 46-72)</li>
+  <ul style="list-style: none; padding: 0;">
+    <li style="padding: 12px 0; border-bottom: 1px solid var(--border);">
+      <a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202024-2025.pdf#page=9" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">Income Gaps and Political Divides: Local Inequality's Effect on Local Election Polarization</a>
+      <span style="color: var(--muted); margin-left: 8px;">(pp. 9-36)</span>
+    </li>
+    <li style="padding: 12px 0; border-bottom: 1px solid var(--border);">
+      <a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202024-2025.pdf#page=37" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">The Impact of Autism Therapy Coverage Mandates on Outcomes for Autistic Children</a>
+      <span style="color: var(--muted); margin-left: 8px;">(pp. 37-62)</span>
+    </li>
+    <li style="padding: 12px 0; border-bottom: 1px solid var(--border);">
+      <a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202024-2025.pdf#page=63" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">Assessing the Impact of Project Green Light: A Google Sustainability Initiative to Reduce City Air Pollution</a>
+      <span style="color: var(--muted); margin-left: 8px;">(pp. 63-88)</span>
+    </li>
+    <li style="padding: 12px 0; border-bottom: 1px solid var(--border);">
+      <a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202023-2024_1.pdf#page=87" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">Assessing the Impact of Police Officer Line-of-Duty Deaths and Force Size on Civilian Arrests</a>
+      <span style="color: var(--muted); margin-left: 8px;">(pp. 87-100)</span>
+    </li>
+    <li style="padding: 12px 0; border-bottom: 1px solid var(--border);">
+      <a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202023-2024_1.pdf#page=129" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">An Empirical Analysis of the 3-Points-for-a-Win Rule in the English Premier League</a>
+      <span style="color: var(--muted); margin-left: 8px;">(pp. 129-147)</span>
+    </li>
+    <li style="padding: 12px 0; border-bottom: 1px solid var(--border);">
+      <a href="https://economics.mit.edu/sites/default/files/2022-08/UEA%20Journal%202020-2021.pdf#page=11" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">A Rising Tide for All or Wave for One?: The Effect of Charter School Competition on District Achievement</a>
+      <span style="color: var(--muted); margin-left: 8px;">(pp. 11-32)</span>
+    </li>
+    <li style="padding: 12px 0;">
+      <a href="https://economics.mit.edu/sites/default/files/2022-08/UEA%20Journal%202019-2020.pdf#page=46" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">Post-Earnings Announcement Drift</a>
+      <span style="color: var(--muted); margin-left: 8px;">(pp. 46-72)</span>
+    </li>
   </ul>
 </section>
