Add documentation comment to past papers section

--- a/tutorial/finding-project.html
+++ b/tutorial/finding-project.html
@@ -631,6 +631,24 @@ current_page: finding-project
   </div>
 </section>
 
+<!--
+  Past 14.33 Papers Section
+
+  Added: 2026-02-13
+  Purpose: List papers from past 14.33 students published in UEA Journal to inspire current students
+
+  Design Notes:
+  - Keep MINIMAL: Just title (as link), page range. User rejected elaborate versions.
+  - Inline styling for professional look: borders, spacing, typography
+  - All 7 papers from 2019-2025 (none in 2021-2022, 2022-2023)
+
+  To modify:
+  1. Update source: docs/uea-journal-14-33-papers.md has full paper details
+  2. Build: npx @11ty/eleventy
+  3. Deploy: Commit this submodule first, then parent repo
+
+  See: .CHANGELOG/2026-02-13_past-papers-tutorial-section.md
+-->
 <section id="past-papers" class="tutorial-section">
   <h2>Past 14.33 Papers</h2>
 
