Remove programmatic download instructions from data repository page

--- a/tutorial/data-repository.html
+++ b/tutorial/data-repository.html
@@ -6,9 +6,7 @@ current_page: data-repository
 <h1>Data Repository</h1>
 <p class="subtitle">Downloadable datasets for in-class exercises</p>
 
-<p>This page hosts datasets used in 14.33 exercises. To download a dataset programmatically in Stata, right-click the download link, copy the URL, and use:</p>
-
-<pre><code class="language-stata">copy "URL" "local_filename.csv", replace</code></pre>
+<p>This page hosts datasets used in 14.33 exercises.</p>
 
 <section class="tutorial-section">
   <h2>Available Datasets</h2>
