Use unified tutorial layout for all tutorial pages
Changed 4 pages from session/example layouts to the shared tutorial
layout, which now handles subfolder detection dynamically.

--- a/tutorial/examples/bac-replication.html
+++ b/tutorial/examples/bac-replication.html
@@ -1,5 +1,5 @@
 ---
-layout: layouts/example.html
+layout: layouts/tutorial.html
 title: A Complete Research Project | Worked Example | 14.33
 current_page: bac-replication
 ---
