--- a/tutorial/worked-examples/texting-bans-event-study.html
+++ b/tutorial/worked-examples/texting-bans-event-study.html
@@ -1,5 +1,5 @@
 ---
-layout: layouts/example.html
+layout: layouts/tutorial.html
 title: Texting Bans and Traffic Fatalities | Worked Example | 14.33
 current_page: texting-bans
 ---
